# itw-exercise

./: README.md  example_empire_data.json
c3po/: package-lock.json  package.json
c3po/src/: App.vue
c3po/src/components/: ResultCard.vue  SettingsCard.vue
c3po/src/models/: bounty_hunter.ts  empire_data.ts
c3po/src/store/: AppModule.ts  index.ts
rs/commons/: Cargo.toml
rs/commons/src/: lib.rs
rs/commons/src/sim/: mod.rs
rs/commons/src/travel/: mod.rs
rs/mill_falc/: Cargo.toml
rs/mill_falc/src/: main.rs
rs/mill_falc/src/routes/: sim.rs
rs/r2d2/: Cargo.toml
rs/r2d2/src/: main.rs
